--- a/GUI/package.json
+++ b/GUI/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "*",
     "express-session": "*",
-    "body-parser": "*"
+    "body-parser": "*",
+    "multer": "*"
   }
 }
